echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-echo
  template:
    metadata:
      labels:
        app: https-echo
    spec:
      containers:
      - name: https-echo
        image: mendhak/http-https-echo:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs
          mountPath: "/certs"
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: traefiklabs-tech-tls
---
apiVersion: v1
kind: Service
metadata:
  name: https-echo
spec:
  selector:
    app: https-echo
  ports:
  - port: 8080
    targetPort: 8080
