traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-lb

  template:
    metadata:
      labels:
        app: traefik-lb

    spec:
      serviceAccountName: traefik-controller
      containers:
        - name: traefik
          image: traefik:v3.2
          args:
            - --entryPoints.http.address=:80
            - --entryPoints.tcp.address=:9000
            - --entryPoints.tls.address=:9443
            - --entryPoints.https.address=:443
            - --providers.kubernetesgateway
            - --providers.kubernetesCRD
            - --providers.kubernetesgateway.experimentalchannel=true
            - --log.level=DEBUG
            - --api.dashboard=true
            - --api.insecure=true

          ports:
            - name: http
              containerPort: 80
            - name: tcp
              containerPort: 9000
            - name: tls
              containerPort: 9443
            - name: https
              containerPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  selector:
    app: traefik-lb

  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
    - protocol: TCP
      port: 9000
      targetPort: tcp
      name: tcp
    - protocol: TCP
      port: 9443
      targetPort: tls
      name: tls
    - protocol: TCP
      port: 443
      targetPort: https
      name: https
