dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.gateway-api.demo.traefiklabs.tech`)
      services:
        - name: api@internal
          kind: TraefikService
